--- a/portfolio/templates/portfolio/index.html
+++ b/portfolio/templates/portfolio/index.html
@@ -702,8 +702,8 @@
                                         <a><img src="{% static 'images/demo-accounting-blog-01.jpg' %}" alt="" /></a>
                                     </div>
                                     <div class="card-body px-0 pt-30px pb-30px xs-pb-15px last-paragraph-no-margin">
-                                        <a class="card-title mb-5px fw-600 text-dark-gray d-block">High returns on investment</a>
-                                        <p>Lorem ipsum simply dummy printing setting industry...</p> 
+                                        <a class="card-title mb-5px fw-600 text-dark-gray d-block">Free AND Premium</a>
+                                        <p>We offer both free and premium features. Want your resume to have that extra punch?</p> 
                                     </div>
                                 </div>
                             </li>
@@ -715,8 +715,8 @@
                                         <a><img src="{% static 'images/demo-accounting-blog-02.jpg' %}" alt="" /></a>
                                     </div>
                                     <div class="card-body px-0 pt-30px pb-30px xs-pb-15px last-paragraph-no-margin">
-                                        <a class="card-title mb-5px fw-600 text-dark-gray d-block">Made businesses efficient</a>
-                                        <p>Lorem ipsum simply dummy printing setting industry...</p> 
+                                        <a class="card-title mb-5px fw-600 text-dark-gray d-block">NO Hidden Fees</a>
+                                        <p>Whatever resume template you're looking for, we've got it!...</p> 
                                     </div>
                                 </div>
                             </li>
@@ -728,8 +728,8 @@
                                         <a><img src="{% static 'images/demo-accounting-blog-03.jpg' %}" alt="" /></a>
                                     </div>
                                     <div class="card-body px-0 pt-30px pb-30px xs-pb-15px last-paragraph-no-margin">
-                                        <a class="card-title mb-5px fw-600 text-dark-gray d-block">Business meeting 2021</a>
-                                        <p>Lorem ipsum simply dummy printing setting industry...</p> 
+                                        <a class="card-title mb-5px fw-600 text-dark-gray d-block">Edit Your Resume in Real Time</a>
+                                        <p>As you edit your resume with our builder, you’ll immediately see the changes...</p> 
                                     </div>
                                 </div>
                             </li>
@@ -741,8 +741,8 @@
                                         <a><img src="{% static 'images/demo-accounting-blog-04.jpg' %}" alt="" /></a>
                                     </div>
                                     <div class="card-body px-0 pt-30px pb-30px xs-pb-15px last-paragraph-no-margin">
-                                        <a class="card-title mb-5px fw-600 text-dark-gray d-block">Corporate workplace ethics</a>
-                                        <p>Lorem ipsum simply dummy printing setting industry...</p> 
+                                        <a class="card-title mb-5px fw-600 text-dark-gray d-block">Live Content Feedback</a>
+                                        <p>Our CV builder provides real-time feedback on your resume content...</p> 
                                     </div>
                                 </div>
                             </li>
