--- a/portfolio/templates/portfolio/password_reset_complete.html
+++ b/portfolio/templates/portfolio/password_reset_complete.html
@@ -4,6 +4,12 @@
 {% block title %}Password reset complete{% endblock %}
 
 {% block content %}
-<h1>Password reset complete</h1>
-<p>Your new password has been set. You can log in now on the <a href=" {% url 'signin' %}">log in page</a>.</p>
+<section class="pt-0">
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+            <h1>Password reset complete</h1>
+            <p>Your new password has been set. You can log in now on the <a href=" {% url 'signin' %}">log in page</a>.</p>
+        </div>
+    </div>
+</section>
 {% endblock %}
