--- a/portfolio/templates/portfolio/password_reset_confirm.html
+++ b/portfolio/templates/portfolio/password_reset_confirm.html
@@ -5,18 +5,26 @@
 
 {% block content %}
 
-{% if validlink %}
 
-<h1>Set a new password!</h1>
-<form method="POST">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" value="Change my password">
-</form>
+<section class="pt-0">
+  <div class="container">
+      <div class="row align-items-center justify-content-center">
+        {% if validlink %}
 
-{% else %}
+        <h1>Set a new password!</h1>
+        <form method="POST">
+          {% csrf_token %}
+          {{ form.as_p }}
+          <input type="submit" value="Change my password">
+        </form>
 
-<p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+        {% else %}
 
-{% endif %}
+        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+
+        {% endif %}
+
+      </div>
+  </div>
+</section>
 {% endblock %}
