--- a/portfolio/templates/portfolio/password_reset_done.html
+++ b/portfolio/templates/portfolio/password_reset_done.html
@@ -4,6 +4,13 @@
 {% block title %}Email Sent{% endblock %}
 
 {% block content %}
-  <h1>Check your inbox.</h1>
-  <p> We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+  
+  <section class="pt-0">
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <h1>Check your inbox.</h1>
+          <p> We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+        </div>
+    </div>
+  </section>
 {% endblock %}
