--- a/portfolio/templates/portfolio/password_reset_form.html
+++ b/portfolio/templates/portfolio/password_reset_form.html
@@ -4,12 +4,19 @@
 {% block title %}Forgot Your Password?{% endblock %}
 
 {% block content %}
-  <h1>Forgot your password?</h1>
-  <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
-
-  <form method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Send me instructions!">
-  </form>
+  
+  <section class="pt-0">
+    <div class="container">
+        <div class="row align-items-center justify-content-center">
+          <h1>Forgot your password?</h1>
+          <p>Enter your email address below, and we'll email instructions for setting a new one.</p>
+        
+          <form method="POST">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <input type="submit" value="Send me instructions!">
+          </form>
+        </div>
+    </div>
+  </section>
 {% endblock %}
